Local modifications to get BC 1.50 to build semi-cleanly on JDK 8 on OS X.

--- a/Java/BouncyCastle-1.50/bc-build.properties
+++ b/Java/BouncyCastle-1.50/bc-build.properties
@@ -3,6 +3,6 @@ release.suffix: 150
 release.name: 1.50
 release.debug: true
 
-mail.jar.home: /opt/javamail/mail.jar
-activation.jar.home: /opt/jaf/activation.jar
-junit.jar.home: /opt/junit/junit.jar
+mail.jar.home: /usr/local/java/javax.mail.jar
+activation.jar.home: /usr/local/java/activation.jar
+junit.jar.home: /usr/local/java/junit-4.11.jar
