--- a/callsha/tests/Makefile
+++ b/callsha/tests/Makefile
@@ -1,4 +1,4 @@
 all : tests
 
-tests : SHA256_VST_KAT.c SHA256_NSS_KAT.c SHA256_sodium_KAT.c SHA256_compare.c
-	gcc Ccommon_test.c run_tests.c SHA256_VST_KAT.c SHA256_NSS_KAT.c SHA256_sodium_KAT.c SHA256_compare.c  test_sha.a -o tests -L/usr/local/lib -lsodium
+tests : SHA256_VST_KAT.c SHA256_NSS_KAT.c SHA256_sodium_KAT.c SHA256_compare.c SHA256_Xcompare.c
+	gcc Ccommon_test.c run_tests.c SHA256_VST_KAT.c SHA256_NSS_KAT.c SHA256_sodium_KAT.c SHA256_compare.c SHA256_Xcompare.c  test_sha.a -o tests -L/usr/local/lib -lsodium
