--- a/callsha/tests2/C_tests/Makefile
+++ b/callsha/tests2/C_tests/Makefile
@@ -1,4 +1,33 @@
-all : tests
+CC = gcc
 
-tests : SHA256_VST_KAT.c SHA256_NSS_KAT.c SHA256_sodium_KAT.c SHA256_compare.c
-	gcc Ccommon_test.c run_tests.c SHA256_VST_KAT.c SHA256_NSS_KAT.c SHA256_sodium_KAT.c SHA256_compare.c  test_sha.a -o tests -L/usr/local/lib -lsodium
+CFLAGS =
+
+INCLUDES = 
+
+LFLAGS = test_sha.a -L/usr/local/lib -lsodium
+
+LIBS = -L/usr/local/lib -lsodium
+
+SRCS = SHA256_compare.c Ccommon_test.c run_tests.c
+
+OBJS = $(SRCS:.c=.o)
+
+MAIN = tests
+
+.PHONY: depend clean
+
+all:    $(MAIN)
+
+$(MAIN): $(OBJS) 
+	$(CC) $(CFLAGS) $(INCLUDES) -o $(MAIN) $(OBJS) $(LFLAGS) $(LIBS)
+
+.c.o:
+	$(CC) $(CFLAGS) $(INCLUDES) -c $<  -o $@
+
+clean:
+	$(RM) *.o *~ $(MAIN)
+
+depend: $(SRCS)
+	makedepend $(INCLUDES) $^
+
+# DO NOT DELETE THIS LINE -- make depend needs it
