reorganize somewhat and buy into monad transformers fully

--- a/calf.cabal
+++ b/calf.cabal
@@ -13,6 +13,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     AlgorithmTypes,
+                       Computation,
                        PPrint,
                        Parser,
                        Implementation.Cryptodev,
