Updated tls-tris to Release_1.10_1.

--- a/.gitmodules
+++ b/.gitmodules
@@ -283,3 +283,6 @@
 [submodule "src/Go/tls-tris"]
 	path = src/Go/tls-tris
 	url = https://github.com/cloudflare/tls-tris.git
+[submodule "tls-tris"]
+	path = src/Go/tls-tris
+	url = https://github.com/cloudflare/tls-tris.git
